# bo-hill-chart

./: 137-kw-bf-bulb.csv  137-kw.xls  bayesian_reduction.py  bayesian_sampled_points.csv  hill_chart.py  main.py  pyproject.toml
bf-bulb/: 10m.csv  12m.csv  16m.csv  17m.csv  18m.csv  19m.csv  20m.csv  21m.csv  22m.csv  23m.csv
bf-gv/: 15m.csv  16m.csv  17m.csv  18m.csv  19m.csv  20m.csv  21m.csv  22m.csv
result/: bayesian_sampled_points.csv  grid_sampled_points.csv  lhs_sampled_points.csv  random_sampled_points.csv  summary.json
