[project]
name = "bo-hill-chart"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "scikit-learn>=1.3.0",
    "scikit-optimize>=0.9.0",
    "pandas>=2.0.0",
    "seaborn>=0.12.0",
    "jupyter>=1.0.0",
    "pyDOE",
]
